# TINY

./: .clang-format  .gitignore  CMakeLists.txt  globals.h  main.c  parse.c  parse.h  scan.c  scan.h  tm.c  util.c  util.h
ch4/: calculator.c
examples/: fact.tny
exercises/: CMakeLists.txt  exercises2-20.c  exercises2-21.c
lex/: CMakeLists.txt  example2-20.l  example2-21.l  example2-22.l  exercises2-22.l  exercises2-23.l  exercises2-24.l  exercises2-25.l  tiny.l
